Added cli for argument handling

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,16 @@
-mysql = {
-  url = "jdbc:mysql://172.17.0.2:3306/test_schema"
-  user = "root"
+
+local {
+  driver = "com.mysql.jdbc.Driver"
+  url = "jdbc:mysql://root:mypass@172.17.0.2:3306/test_schema"
+  username = "root"
   password = "mypass"
-  connectionPool = disabled
-  keepAliveConnection = true
+  port = "3306"
+}
+
+dev {
+  driver = "com.mysql.jdbc.Driver"
+  url = "jdbc:mysql://root:mypass@172.17.0.2:3306/test_schema"
+  username = "root"
+  password = "mypass"
+  port = "3306"
 }
