Added manual sql migration example

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 
 local {
   driver = "com.mysql.jdbc.Driver"
-  url = "jdbc:mysql://root:mypass@172.17.0.2:3306/test_schema"
+  url = "jdbc:mysql://root:mypass@localhost:3306/main_flyway_schema"
   username = "root"
   password = "mypass"
   port = "3306"
